# aleph-os

./: .gitignore  Makefile  README.md  aleph-os-image-aarch64.json  aleph-os-image-x86_64.json  aleph-os-image.json  aleph-os.conf  x86_64-unknown-none.json
kernel/: Cargo.toml  README.md  aleph-naught.ld  build.rs
kernel/assets/: aleph-os.tga
kernel/custom-targets/: aarch64-aleph_os-kernel.json  x86_64-aleph_os-kernel.json
kernel/src/: arch.rs  bootboot.rs  lib.rs  main.rs  mem.rs  panic_handler.rs
kernel/src/arch/: aarch64.rs  x86_64.rs
kernel/src/arch/aarch64/: interrupt.rs
kernel/src/arch/x86_64/: interrupt.rs  mem.rs
kernel/src/arch/x86_64/interrupt/: exception.rs  idt.rs
kernel/src/bootboot/: framebuffer.rs
