# Copyright 2021 Michael Leany
# 
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
####################################################################################################

[package]
name = "aleph-naught"
version = "0.1.0"
edition = "2021"
authors = ["Mike Leany"]
description = "The kernel for the Aleph Operating System"
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/mikeleany/aleph-os"
keywords = ["kernel", "osdev"]
categories = ["os", "no-std", "embedded"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.1"
lazy_static = { version = "1.4.0", features = [ "spin_no_std" ] }
log = "0.4.14"
rlibc = "1.0"
spin = { version = "0.9.2", features = [ "use_ticket_mutex" ] }
tinytga = "0.4.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.14.10", default-features = false, features = ["instructions"] }
